--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Own additions
+papers/
 mri_images/
 mri_kaggle_dataset/
 __pycache__/
@@ -6,11 +7,12 @@ __pycache__/
 .vscode/
 plots/
 models/
-
+*.npy
 *.env
 *.csv
 *.html
 *.DS_Store
+*.nii
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
