Basic Flask Web UI and better directory structure
- Add MRI scan viewer
- Refactor imports
- Refactor directory structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,76 @@
-absl-py==1.0.0
-astroid==2.9.3
+absl-py==2.1.0
 astunparse==1.6.3
-autopep8==1.6.0
-boto3==1.20.40
-botocore==1.23.40
-cachetools==5.0.0
-certifi==2021.10.8
-charset-normalizer==2.0.10
-click==8.0.4
-colorama==0.4.4
-cycler==0.11.0
-flatbuffers==2.0
-fonttools==4.30.0
-gast==0.4.0
-google-auth==2.4.1
-google-auth-oauthlib==0.4.6
+blinker==1.8.2
+boto3==1.35.7
+botocore==1.35.7
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.53.1
+gast==0.6.0
 google-pasta==0.2.0
-grpcio==1.43.0
-h5py==3.6.0
-idna==3.3
-imbalanced-learn==0.9.0
+grpcio==1.66.0
+h5py==3.11.0
+idna==3.8
+imageio==2.35.1
+imbalanced-learn==0.12.3
 imblearn==0.0
-importanize==0.7.0
-importlib-metadata==4.10.1
-isort==5.10.1
-jmespath==0.10.0
-joblib==1.1.0
-kaleido==0.2.1
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.0
-lazy-object-proxy==1.7.1
-libclang==12.0.0
-libcst==0.3.23
-Markdown==3.3.6
-matplotlib==3.5.1
-mccabe==0.6.1
-mypy-extensions==0.4.3
-nibabel==3.2.2
-numpy==1.22.1
-oauthlib==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+keras==3.5.0
+kiwisolver==1.4.5
+lazy_loader==0.4
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.0
+namex==0.0.8
+networkx==3.3
+nibabel==5.2.1
+numpy==1.26.4
+opencv-python==4.10.0.84
 opt-einsum==3.3.0
-packaging==21.3
-pandas==1.3.5
-pathlib2==2.3.7.post1
-pathspec==0.9.0
-Pillow==9.0.1
-platformdirs==2.4.1
-plotly==5.5.0
-protobuf==3.19.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
-pylint==2.12.2
-Pyment==0.3.3
-pyparsing==3.0.7
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-pytz==2021.3
-PyYAML==5.4.1
-requests==2.27.1
-requests-oauthlib==1.3.0
-rsa==4.8
-s3transfer==0.5.0
-scikit-learn==1.0.2
-scipy==1.7.3
+optree==0.12.1
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+plotly==5.23.0
+protobuf==4.25.4
+Pygments==2.18.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+requests==2.32.3
+rich==13.8.0
+s3transfer==0.10.2
+scikit-image==0.24.0
+scikit-learn==1.5.1
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==74.0.0
 six==1.16.0
-sklearn==0.0
-tenacity==8.0.1
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.23.1
-termcolor==1.1.0
-threadpoolctl==3.0.0
-toml==0.10.2
-typer==0.4.0
-typing-inspect==0.7.1
-typing_extensions==4.0.1
-urllib3==1.26.8
-Werkzeug==2.0.2
-wrapt==1.13.3
-yapf==0.32.0
-zipp==3.7.0
+tenacity==9.0.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tifffile==2024.8.28
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+Werkzeug==3.0.4
+wheel==0.44.0
+wrapt==1.16.0
