Update project files and Docker configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,76 @@
-absl-py==2.1.0
-astunparse==1.6.3
-blinker==1.8.2
-boto3==1.35.7
-botocore==1.35.7
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.53.1
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.66.0
-h5py==3.11.0
-idna==3.8
-imageio==2.35.1
-imbalanced-learn==0.12.3
-imblearn==0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-keras==3.5.0
-kiwisolver==1.4.5
-lazy_loader==0.4
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-mdurl==0.1.2
-ml-dtypes==0.4.0
-namex==0.0.8
-networkx==3.3
-nibabel==5.2.1
-numpy==1.26.4
-opencv-python==4.10.0.84
-opt-einsum==3.3.0
-optree==0.12.1
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-plotly==5.23.0
-protobuf==4.25.4
-Pygments==2.18.0
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.1
-requests==2.32.3
-rich==13.8.0
-s3transfer==0.10.2
-scikit-image==0.24.0
-scikit-learn==1.5.1
-scipy==1.14.1
-seaborn==0.13.2
-setuptools==74.0.0
-six==1.16.0
-tenacity==9.0.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
-termcolor==2.4.0
-threadpoolctl==3.5.0
-tifffile==2024.8.28
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
+absl-py
+astunparse
+blinker
+boto3
+botocore
+certifi
+charset-normalizer
+click
+colorama
+cycler
+Flask
+flatbuffers
+fonttools
+gast
+google-pasta
+grpcio
+h5py
+idna
+imageio
+imbalanced-learn
+imblearn
+itsdangerous
+Jinja2
+jmespath
+joblib
+keras
+kiwisolver
+lazy_loader
+libclang
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+ml-dtypes
+namex
+networkx
+nibabel
+numpy
+opencv-python
+opt-einsum
+optree
+packaging
+pandas
+pillow
+plotly
+protobuf
+Pygments
+pyparsing
+python-dateutil
+python-dotenv
+pytz
+requests
+rich
+s3transfer
+scikit-image
+scikit-learn
+scipy
+seaborn
+setuptools
+six
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-intel
+termcolor
+threadpoolctl
+tifffile
+typing_extensions
+tzdata
+urllib3
+Werkzeug
+wheel
+wrapt
+gunicorn
